<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Passera</string>
    <string name="phrase">Passphrase</string>
    <string name="phrase_rep">Again (optional)</string>
    <string name="copy">Copy to clipboard</string>
    <string name="show">Show on screen</string>
    <string name="desc">Passera will turn anything entered here into a secure password. Read more on https://github.com/mwgg/passera</string>
    <string name="action_about">About</string>
    <string name="chars">Use special characters</string>
    <string name="pwlen">Password length</string>
    <string name="hide">Hide</string>

</resources>
